[gd_scene load_steps=5 format=3 uid="uid://b1e2y66b6m53r"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_uym2o"]
[ext_resource type="PackedScene" uid="uid://di0dhm6k3sfb0" path="res://pine_tree.tscn" id="2_q47n5"]
[ext_resource type="PackedScene" uid="uid://fydbvmcekl5q" path="res://player.tscn" id="3_bp283"]

[sub_resource type="Curve2D" id="Curve2D_axqsr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -663, -393, 0, 0, 0, 0, 2094.12, -398.731, 0, 0, 0, 0, 2094.12, 877.767, 0, 0, 0, 0, -621.018, 884.214, 0, 0, 0, 0, -632.156, 884.214, 0, 0, 0, 0, -663, -391)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uym2o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.396078, 0.72549, 0.286275, 1)

[node name="Player" parent="." instance=ExtResource("3_bp283")]
position = Vector2(917, 609)
platform_floor_layers = 0

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-796.295, -422.509)
scale = Vector2(1.13379, 1.6314)
curve = SubResource("Curve2D_axqsr")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-663, -393)
rotation = -0.00207861

[node name="Mob_Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Tree_Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 108
text = "Game Over"

[node name="StaticBody2D" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(580, 655)

[node name="StaticBody2D2" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1452, 329)

[node name="StaticBody2D3" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1516, 384)

[node name="StaticBody2D4" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(422, 273)

[node name="StaticBody2D5" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1525, 733)

[node name="StaticBody2D6" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(539, 778)

[node name="StaticBody2D7" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(973, 154)

[node name="PineTree" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1423, 954)

[node name="PineTree2" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(764, 325)

[node name="PineTree3" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1137, 719)

[node name="PineTree4" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(117, 961)

[node name="PineTree5" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(210, 118)

[node name="PineTree6" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1774, 422)

[node name="PineTree7" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(1620, 70)

[node name="PineTree8" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(493, 678)

[node name="PineTree9" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(958, 979)

[node name="PineTree10" parent="." instance=ExtResource("2_q47n5")]
position = Vector2(175, 477)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Mob_Timer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="Tree_Timer" to="." method="_on_tree_timer_timeout"]
